@@ -1,5 +1,6 @@
 package org.openhab.core.ai.tool.util;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -7,6 +8,8 @@ import java.util.concurrent.ConcurrentHashMap;
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.eclipse.jdt.annotation.Nullable;
 import org.openhab.core.ai.tool.api.Tool;
+import org.openhab.core.ai.tool.api.ToolContext;
+import org.openhab.core.ai.tool.api.ToolResult;
 import org.openhab.core.ai.tool.api.ToolValidationResult;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -55,11 +58,60 @@ public class ToolUtils {
 
             McpServerFeatures.SyncToolSpecification spec = McpServerFeatures.SyncToolSpecification.builder()
                     .tool(mcpTool).callHandler((exchange, toolReq) -> {
-                        // This would be implemented with actual tool execution logic
-                        // For now, return a placeholder result
-                        List<McpSchema.Content> contents = List
-                                .of(new McpSchema.TextContent("Tool execution placeholder"));
-                        return new McpSchema.CallToolResult(contents, false);
+                        // Implement actual tool execution logic
+                        try {
+                            LOGGER.debug("Executing sync tool: {}", toolId);
+
+                            // Convert MCP request to tool parameters
+                            Map<String, Object> parameters = toolReq.arguments() != null ? toolReq.arguments()
+                                    : Map.of();
+
+                            // Validate parameters
+                            ToolValidationResult validation = tool.validateParameters(parameters);
+                            if (!validation.isValid()) {
+                                LOGGER.warn("Tool parameter validation failed for {}: {}", toolId,
+                                        validation.getMessage());
+                                return new McpSchema.CallToolResult(Arrays.asList(
+                                        new McpSchema.TextContent("Validation failed: " + validation.getMessage())),
+                                        true);
+                            }
+
+                            // Create tool context
+                            ToolContext context = new ToolContext();
+                            context.setProperty("requestId", toolReq.name());
+                            context.setProperty("timestamp", System.currentTimeMillis());
+
+                            // Execute the tool
+                            long startTime = System.currentTimeMillis();
+                            ToolResult result = tool.execute(parameters, context);
+                            long executionTime = System.currentTimeMillis() - startTime;
+
+                            // Log performance metrics
+                            org.openhab.core.ai.tool.util.helpers.ToolUtils.optimizeToolPerformance(toolId,
+                                    executionTime);
+
+                            if (result.isSuccess()) {
+                                LOGGER.debug("Tool execution successful for {} in {}ms", toolId, executionTime);
+
+                                // Convert result to MCP format
+                                List<McpSchema.Content> contents = Arrays.asList(new McpSchema.TextContent(
+                                        result.getContent() != null ? result.getContent().toString() : "Success"));
+
+                                return new McpSchema.CallToolResult(contents, false);
+                            } else {
+                                LOGGER.warn("Tool execution failed for {}: {}", toolId, result.getError());
+                                return new McpSchema.CallToolResult(
+                                        Arrays.asList(
+                                                new McpSchema.TextContent("Execution failed: " + result.getError())),
+                                        true);
+                            }
+
+                        } catch (Exception e) {
+                            LOGGER.error("Error executing sync tool: {}", toolId, e);
+                            return new McpSchema.CallToolResult(
+                                    Arrays.asList(new McpSchema.TextContent("Internal error: " + e.getMessage())),
+                                    true);
+                        }
                     }).build();
 
             // Cache the specification
@@ -97,12 +149,60 @@ public class ToolUtils {
 
             McpServerFeatures.AsyncToolSpecification spec = McpServerFeatures.AsyncToolSpecification.builder()
                     .tool(mcpTool).callHandler((exchange, toolReq) -> {
-                        // This would be implemented with actual async tool execution logic
-                        // For now, return a placeholder result
+                        // Implement actual async tool execution logic
                         return reactor.core.publisher.Mono.fromCallable(() -> {
-                            List<McpSchema.Content> contents = List
-                                    .of(new McpSchema.TextContent("Async tool execution placeholder"));
-                            return new McpSchema.CallToolResult(contents, false);
+                            try {
+                                LOGGER.debug("Executing async tool: {}", toolId);
+
+                                // Convert MCP request to tool parameters
+                                Map<String, Object> parameters = toolReq.arguments() != null ? toolReq.arguments()
+                                        : Map.of();
+
+                                // Validate parameters
+                                ToolValidationResult validation = tool.validateParameters(parameters);
+                                if (!validation.isValid()) {
+                                    LOGGER.warn("Tool parameter validation failed for {}: {}", toolId,
+                                            validation.getMessage());
+                                    return new McpSchema.CallToolResult(Arrays.asList(
+                                            new McpSchema.TextContent("Validation failed: " + validation.getMessage())),
+                                            true);
+                                }
+
+                                // Create tool context
+                                ToolContext context = new ToolContext();
+                                context.setProperty("requestId", toolReq.name());
+                                context.setProperty("timestamp", System.currentTimeMillis());
+
+                                // Execute the tool
+                                long startTime = System.currentTimeMillis();
+                                ToolResult result = tool.execute(parameters, context);
+                                long executionTime = System.currentTimeMillis() - startTime;
+
+                                // Log performance metrics
+                                org.openhab.core.ai.tool.util.helpers.ToolUtils.optimizeToolPerformance(toolId,
+                                        executionTime);
+
+                                if (result.isSuccess()) {
+                                    LOGGER.debug("Async tool execution successful for {} in {}ms", toolId,
+                                            executionTime);
+
+                                    // Convert result to MCP format
+                                    List<McpSchema.Content> contents = Arrays.asList(new McpSchema.TextContent(
+                                            result.getContent() != null ? result.getContent().toString() : "Success"));
+
+                                    return new McpSchema.CallToolResult(contents, false);
+                                } else {
+                                    LOGGER.warn("Async tool execution failed for {}: {}", toolId, result.getError());
+                                    return new McpSchema.CallToolResult(Arrays.asList(
+                                            new McpSchema.TextContent("Execution failed: " + result.getError())), true);
+                                }
+
+                            } catch (Exception e) {
+                                LOGGER.error("Error executing async tool: {}", toolId, e);
+                                return new McpSchema.CallToolResult(
+                                        Arrays.asList(new McpSchema.TextContent("Internal error: " + e.getMessage())),
+                                        true);
+                            }
                         });
                     }).build();
 
@@ -132,9 +232,9 @@ public class ToolUtils {
             ToolValidationResult result = tool.validateParameters(parameters);
 
             EnhancedValidationResult enhancedResult = new EnhancedValidationResult(result.isValid(),
-                    result.isValid() ? List.of()
-                            : List.of(result.getMessage() != null ? result.getMessage() : "Validation failed"),
-                    List.of(), toolId, parameters);
+                    result.isValid() ? Arrays.asList()
+                            : Arrays.asList(result.getMessage() != null ? result.getMessage() : "Validation failed"),
+                    Arrays.asList(), toolId, parameters);
 
             if (!result.isValid()) {
                 LOGGER.warn("Tool parameter validation failed for {}: {}", toolId, result.getMessage());
@@ -146,8 +246,8 @@ public class ToolUtils {
 
         } catch (Exception e) {
             LOGGER.error("Error validating tool parameters for: {}", toolId, e);
-            return new EnhancedValidationResult(false, List.of("Validation error: " + e.getMessage()), List.of(),
-                    toolId, parameters);
+            return new EnhancedValidationResult(false, Arrays.asList("Validation error: " + e.getMessage()),
+                    Arrays.asList(), toolId, parameters);
         }
     }
 
@@ -224,17 +324,17 @@ public class ToolUtils {
         try {
             // Enhanced schema conversion with better error handling
             if (schemaMap == null || schemaMap.isEmpty()) {
-                return new McpSchema.JsonSchema("object", Map.of(), List.of(), true, Map.of(), Map.of());
+                return new McpSchema.JsonSchema("object", Map.of(), Arrays.asList(), true, Map.of(), Map.of());
             }
 
             // Convert the schema map to MCP JSON schema format
             // This is a simplified conversion - in a real implementation,
             // you would have more sophisticated schema conversion logic
-            return new McpSchema.JsonSchema("object", Map.of(), List.of(), true, Map.of(), schemaMap);
+            return new McpSchema.JsonSchema("object", Map.of(), Arrays.asList(), true, Map.of(), schemaMap);
 
         } catch (Exception e) {
             LOGGER.error("Error converting schema to JSON schema", e);
-            return new McpSchema.JsonSchema("object", Map.of(), List.of(), true, Map.of(), Map.of());
+            return new McpSchema.JsonSchema("object", Map.of(), Arrays.asList(), true, Map.of(), Map.of());
         }
     }
 
